force-app/main/default/objects/DocuSignReviewer__c/DocuSignReviewer__c.object-meta.xml
<CustomObject>
    <label>DocuSignReviewer</label>
    <nameField>
        <displayFormat>DSR-{000000}</displayFormat>
        <label>DocuSignReviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSignReviewer</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>