force-app/main/default/objects/DocuSignReviewer__c/fields/Inventor_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventor_Name__c</fullName>
    <label>Inventor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>