force-app/main/default/objects/DocuSignReviewer__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>