force-app/main/default/objects/DocuSignReviewer__c/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <label>RecipientId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>